# cube_practice_app

./: .gitignore  LICENSE  README.md  psql_launcher.sh
.github/: FUNDING.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_users_and_sessions.sql  0002_cases.sql  0003_seed_oll_cases.sql  0004_user_case_progress.sql  0005_tags_array.sql  0006_users_onboarding_seen.sql  0007_account_deletions.sql  0008_fix_case_34_result_rotation.sql  0009_clear_global_nicknames.sql  0010_display_rotation.sql  0011_remap_oll_case_numbers.sql  0012_account_deletions_hash_email.sql
backend/src/: account_delete.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  onboarding.rs  state.rs
backend/src/auth/: code.rs  cookie.rs  extractor.rs  jwt.rs  mod.rs  password.rs  rate_limit.rs  recaptcha.rs  session.rs  turnstile.rs
backend/src/cases/: mod.rs
backend/src/email/: mod.rs  resend.rs  templates.rs
backend/src/guest_state/: mod.rs
backend/src/progress/: mod.rs
backend/src/routes/: auth.rs  cases.rs  mod.rs  progress.rs  study.rs
backend/src/srs/: mod.rs
backend/src/study/: mod.rs
backend/tests/: account_delete.rs  cases_global.rs  cases_merge.rs  cases_schema.rs  cases_seed.rs  cases_settings.rs  db_harness.rs  guest_state_import.rs  guest_state_merge.rs  onboarding.rs  onboarding_seen_schema.rs  progress.rs  progress_schema.rs  study.rs  tag_caps.rs  tags_schema.rs  users_cascade_schema.rs
backend/tests/common/: mod.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  Cube_Practice_Design_Doc.md  LAUNCH_CHECKLIST.md  MVP_QA_CHECKLIST.md  OLL_App_Design_Doc.md  TODO.md  (+7 more)
(+110 files in other folders)
